[tool.poetry]
name = "election-utils"
version = "0.1.0"
description = "General utilities for election and voting data"
authors = ["jreakin <johnreakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "^2.9.2"
sqlmodel = "^0.0.21"
icecream = "^2.1.3"
pydantic-extra-types = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
